--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 	Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 	Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</p>
-    <a href="#" class="pl-0 middleOne-btn">Read more<i class="fa fa-chevron-right fa-sm"></i></a>
+    <a href="#" class="pl-0 middleOne-btn">Read more<i class="fa fa-chevron-right fa-xs"></i></a>
   </div>
 </div>
 </div>
