--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6J
 <title>Yowsee</title>
 </head>
 <body>
-<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up fa-1x"></i></button>
+<button onclick="topFunction()" id="myBtn" title="Go to top"><i class="fa fa-chevron-up fa-2xs"></i></button>
 
 <div class="main-container"> <!-- main body container -->
 <div class="">
